--- a/web/sources/homestyles.css
+++ b/web/sources/homestyles.css
@@ -3,11 +3,13 @@
 
 :root{
     /*    Colors!     */
-    --primary: #2FBF71;     /*    Darker Green, "Emerald"     */
-    --secondary: #8CD867;   /*    Lighter Green, "Pistachio"     */
-    --accent: #ED7D3A;      /*    Orangey, "Mango Tango"     */
-    --special: #EF2D56;     /*    Red (for errors maybe?), "Red Crayola"     */    
+    --primary: #3A5A40;     
+    --secondary: #588157;
+    --tertiary: #A3B18A;
+    --accent: #ED7D3A;      /*    Orange, "Mango Tango"     */
+    --special: #EF2D56;     /*    Red, "Red Crayola"     */    
     --dark: #363537;        /*    "Jet"     */
+    --largebg: #DAD7CD;     /*    Beige     */
     
     /*    Text!     */
     --headings: 'Noto Serif', serif;
@@ -15,16 +17,9 @@
     --body-text: 'Source Sans Pro', sans-serif;    
 }
 
-h1 {
-    font-family: var(--headings);
-}
-
-h2 {
-    font-family: var(--headings2);
-}
-
-p {
-    font-family: var(--body-text);
+/* Styling for elements applicable to all pages. */
+* {
+    box-sizing: border-box;
 }
 
 html, body {    
@@ -41,10 +36,30 @@ header, footer {
     flex: 0 1 auto;
     width: 100%;
     height: 10%;
+    padding: 0 2rem 0;
+    background-color: var(--primary);    
+    color: #FFFFFF;
+    position: sticky;
+}
+
+header {
     display: flex;
+    justify-content: center;
     align-items: center;
-    padding: 0 3rem 0;    
-    background-color: var(--primary);
+    color: #FFFFFF;
+    top: 0;
+}
+
+footer {
+    display: inline-block;
+    align-items: space-around;
+    font-family: var(--headings2);
+    font-weight: bold;
+    bottom: 0;
+}
+
+header #site-logo {
+    height: 80px;
 }
 
 main {
@@ -54,10 +69,14 @@ main {
     align-items: center;
 }
 
-header {
-    top: 0;
-    position: sticky;
-}
+/*
+
+
+
+
+
+
+
 
 footer {
     font-weight: bold;
@@ -65,6 +84,5 @@ footer {
     bottom: 0;
 }
 
-header #site-logo {
-    width: 10%
-}
+
+*/
