--- a/web/sources/homestyles.css
+++ b/web/sources/homestyles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 :root{
     /*    Colors!     */
@@ -14,7 +15,8 @@
     /*    Text!     */
     --headings: 'Noto Serif', serif;
     --headings2: 'Montserrat', sans-serif;
-    --body-text: 'Source Sans Pro', sans-serif;    
+    --body-text: 'Source Sans Pro', sans-serif;   
+    --special: 'Satisfy', cursive; 
 }
 
 /* Styling for elements applicable to all pages. */
@@ -36,6 +38,7 @@ header, footer {
     flex: 0 1 auto;
     width: 100%;
     height: 10%;
+    min-height: 10%;
     padding: 0 2rem 0;
     background-color: var(--primary);    
     color: #FFFFFF;
@@ -51,11 +54,16 @@ header {
 }
 
 footer {
-    display: inline-block;
-    align-items: space-around;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-family: var(--headings2);
     font-weight: bold;
     bottom: 0;
+}
+
+footer p {
+    padding: 0 3rem;
 }
 
 header #site-logo {
@@ -67,22 +75,45 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--largebg);
+}
+/* ----------          END       ---------- */
+
+.main-container {
+    margin: auto;
+    padding: auto;
+    display: flex;
+    flex-direction: column;
+    width: 70%;
 }
 
-/*
-
-
-
-
-
-
-
-
-footer {
-    font-weight: bold;
-    position: sticky;
-    bottom: 0;
+.site-greetings {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--headings);
+    font-size: 1.3rem;   
+    margin: 3rem 0;
 }
 
+.logo-holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-*/
+.logo-holder #site-logo {
+    height: 40vh;
+}
+
+.logo-text-holder {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30%;
+    font-size: 2.6rem;
+    color: var(--secondary);
+    text-shadow: 2px 2px 3px var(--tertiary);
+    font-family: var(--special);
+}
