--- a/web/sources/homestyles.css
+++ b/web/sources/homestyles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
@@ -77,6 +77,10 @@ main {
     align-items: center;
     background-color: var(--largebg);
 }
+
+a:hover {
+    cursor: pointer;
+}
 /* ----------          END       ---------- */
 
 .main-container {
@@ -93,8 +97,10 @@ main {
     justify-content: center;
     align-items: center;
     font-family: var(--headings);
-    font-size: 1.3rem;   
-    margin: 3rem 0;
+    font-size: 1.4rem;   
+    margin: 2.5rem 0;
+    color: #825108;    
+    text-shadow: 1px 1px 3px #AB8855;
 }
 
 .logo-holder {
@@ -116,4 +122,75 @@ main {
     color: var(--secondary);
     text-shadow: 2px 2px 3px var(--tertiary);
     font-family: var(--special);
+}
+
+.button-holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3em;
+}
+
+.common-button {
+    margin: 0 2em;
+    border-style: solid;
+    border-color: var(--primary);
+    border-radius: 30px;
+    height: 70px;
+    width: 300px;
+    color: #FFFFFF;
+    background-color: var(--secondary);
+    font-family: var(--headings2);    
+    font-size: 1.2rem;
+    font-weight: bold;
+    transition: all .2s ease-in-out;
+}
+
+.common-button:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 8px var(--tertiary);
+    transform: scale(1.15);    
+}
+
+.special-button {
+    border-color: var(--primary);
+    background-color: var(--tertiary);
+    transition: all .2s ease-in-out;
+}
+
+.special-button:hover {
+    cursor: help;
+    box-shadow: 0px 0px 8px var(--primary);
+    transform: scale(1.15);  
+}
+
+.line-break {
+    border-width: 4px;
+    color: var(--secondary);
+    border-style: solid none none;
+    margin: 3em 0;
+}
+
+.site-information {
+    margin-bottom: 2.5rem;
+}
+
+.site-information h2 {
+    text-align: center;
+    font-size: 44pt;
+    color: var(--secondary);
+    text-shadow: 2px 2px 3px var(--tertiary);
+    font-family: var(--special);
+}
+
+.site-information p {
+    text-align: center;
+    font-family: var(--body-text);
+    color: var(--dark);
+    font-size: 16pt;
+}
+
+.emphasized {
+    color: var(--secondary);
+    font-weight: bold;
 }
