--- a/web/sources/shopstyles.css
+++ b/web/sources/shopstyles.css
@@ -128,11 +128,17 @@ nav {
     box-shadow: 0px 0px 8px var(--tertiary);
 }
 
+.side-wrapper {
+    height: 100%;
+    width: 100%;
+    padding: 2rem 0;
+    display: flex;
+    justify-content: center;
+}
+
 .left-side, .right-side {
     border: 2px solid var(--primary);
-    border-radius: 15px;    
-    height: 90%;
-    min-height: 90%;
+    border-radius: 15px;
 }
 
 .left-side {    
@@ -141,6 +147,7 @@ nav {
     box-shadow: 0px 0px 8px var(--primary);
     margin: 0 3%;
     justify-content: center;
+    align-items: center;
 }
 
 .right-side {    
@@ -162,5 +169,69 @@ nav {
     width: 80%;
     color: var(--secondary);
     border-style: solid none none;
-    margin: 0 auto;
+    margin: 0 auto 2em;
+}
+
+.stock-holder {    
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 3%;
+}
+
+.shop-item {
+    border: 1px solid black;
+    display: flex;    
+    flex-direction: column;
+    width: 20%;
+    max-width: 20%;
+    margin: 1em 0;
+    background-color: var(--tertiary);
+    border-radius: 15px;
+}
+
+.shop-item img {
+    height: 200px;
+    width: 200px;
+    max-width: 90%;
+    object-fit: cover;
+    border-radius: 10px;
+    margin: 1em auto 0;
+}
+
+.shop-item h3 {    
+    font-family: var(--headings2);
+    color: #FFFFFF;
+    text-align: center;
+    text-shadow: .5px .5px 3px var(--secondary);
+}
+
+.shop-item p {
+    font-family: var(--body-text);
+    font-weight: bold;
+    color: var(--dark);    
+    text-align: center;
+    font-size: 16pt;
+}
+
+.special-button {    
+    border-style: solid;
+    border-color: var(--primary);
+    border-radius: 30px;
+    height: 70px;
+    width: 90%;
+    color: #FFFFFF;    
+    font-family: var(--headings2);
+    font-size: 1.2rem;
+    font-weight: bold;
+    border-color: var(--primary);
+    background-color: var(--tertiary);
+    display: block;
+    margin: 1em auto 0;
+}
+
+.special-button:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 8px var(--primary);
 }
