--- a/web/sources/shopstyles.css
+++ b/web/sources/shopstyles.css
@@ -154,6 +154,8 @@ nav {
     box-shadow: 0px 0px 8px var(--tertiary);
     width: 20%;
     margin-right: 3%;
+    justify-content: center;
+    align-items: center;
 }
 
 .left-side h1, .right-side h1 {
@@ -177,18 +179,19 @@ nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 3%;
+    gap: 2%;
 }
 
 .shop-item {
     border: 1px solid black;
     display: flex;    
     flex-direction: column;
+    text-align: center;
     width: 20%;
     max-width: 20%;
     margin: 1em 0;
     background-color: var(--tertiary);
-    border-radius: 15px;
+    border-radius: 15px;    
 }
 
 .shop-item img {
@@ -197,7 +200,7 @@ nav {
     max-width: 90%;
     object-fit: cover;
     border-radius: 10px;
-    margin: 1em auto 0;
+    margin: 1em auto 0;    
 }
 
 .shop-item h3 {    
@@ -208,11 +211,13 @@ nav {
 }
 
 .shop-item p {
+    display: inline-block;
     font-family: var(--body-text);
     font-weight: bold;
     color: var(--dark);    
     text-align: center;
     font-size: 16pt;
+    line-height: 0.3;
 }
 
 .special-button {    
@@ -234,4 +239,100 @@ nav {
 .special-button:hover {
     cursor: pointer;
     box-shadow: 0px 0px 8px var(--primary);
+}
+
+.addCartButton {
+    height: 40px;
+    width: 70%;
+    border-style: solid;
+    border-color: var(--primary);
+    border-radius: 30px;
+    background-color: var(--secondary);    
+    color: #FFFFFF;
+    margin: 1em auto;
+    font-family: var(--headings2);
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.addCartButton:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 8px var(--secondary);
+}
+
+.addCartButton:disabled {
+    background-color: var(--primary);
+    border-color: var(--secondary);
+}
+
+.addCartButton:disabled:hover {
+    cursor: not-allowed;
+    box-shadow: none;
+}
+
+.cart-items {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
+    margin: 0 auto;
+}
+
+.cart-item {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;  
+}
+
+.cart-item img {
+    max-width: 75px;
+    max-height: 75px;
+    object-fit: cover;
+    margin: 0 auto;    
+}
+
+.cart-info {    
+    display: inline-block;
+    font-family: var(--body-text);
+    line-height: 0.8;
+    width: 80%;    
+    margin: 0 1em;
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    overflow-wrap: break-word;
+}
+
+.cart-info input {
+    width: 80%;
+    border: none;
+    border-bottom: 2px solid var(--primary);
+    font-family: var(--body-text);
+    font-weight: bold;
+    line-height: 0.8;
+    background-color: transparent;
+    margin: 0 auto;
+}
+
+.cart-info input:focus {        
+    cursor: text;    
+    outline-color: var(--primary);
+}
+
+.removeCartButton {
+    height: 40px;
+    border-style: solid;
+    border-color: var(--tertiary);
+    border-radius: 30px;
+    background-color: var(--error);    
+    color: #FFFFFF;
+    font-family: var(--headings2);
+}
+
+.removeCartButton:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 8px var(--error);
 }
